app/styles/main.scss
@font-face {
    font-family: 'Roboto-thin';
    src: url('../fonts/roboto-thin-webfont.woff2') format('woff2'),
         url('../fonts/roboto-thin-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

$font-family-sans-serif: 'Roboto-thin', sans-serif;

$blue: #2A3440;
$green: #77C7A9;
$white: #F2F2F2;
// bower:scss
@import "bower_components/bootstrap/scss/bootstrap.scss";
// endbower


.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body, html {
  margin: 0 !important;
  padding: 0 !important;
}

/* Space out content a bit */
body {
  // padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header, .marketing, .footer {
  padding-right: 1rem;
  padding-left: 1rem;
}

.main {
  box-shadow: 0 1px 10px rgba(0,0,0,.25);
}

* { font-size: 1.05em; }
h2 { font-size: 2em; }

@mixin tileable(){
  background-size: 1140px;
  @include media-breakpoint-down(md) {
    background-size: 100%;
  }
}

header {
  padding: 30px;
  padding-bottom: 150px;
  img#logo {
    display: block;
    height: 200px;
    margin: 0px auto;
  }
  background: url("../images/desk_banner.svg") repeat-x center bottom;
  background-color: white;
  @include tileable();
}
.section {
  overflow: hidden;
  .container{
    padding: 170px 100px 100px;
    @include clearfix();
  }
}


.section-1 {
  background: url("../images/edge_green.svg") repeat-x center top;
  @include tileable();
}

.section-2 {
  .container {
    // height: 500px;
    padding: 250px;
    position: relative;
  }

  #vive-guy {
    position: absolute;;
    width: 600px;
    left: 50%;
    padding-left: -50%;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
  }
  #controller-1, #controller-2 {
    position: absolute;
    width: 75px;
    top: 180px;
    left: 0;
    right: 0;
    margin: auto;
  }
  #controller-1 {
    transform: rotate(-30deg);
    right: 550px;
  }
  #controller-2 {
    transform: rotate(30deg);
    left: 550px;
  }

  background:
     url("../images/dedge_verywhite.svg") repeat-x center top,
     url("../images/edge_verywhite.svg") repeat-x center bottom;
  background-color: $blue;
  @include tileable();
}

.section-3 {
  .carousel-item{ padding: 100px 0; }
  .carousel {
    width: 80%;
    margin: auto;
  }
  .carousel-indicators li {
    background-color: lighten($blue, 30%);
    &.active  { background-color: $blue; }
  }
}

.section-4 {
  color: white;
  img {
    float: right;
    width: 300px;
  }
  background:
    url("../images/dedge_verywhite.svg") repeat-x center top,
    url("../images/edge_verywhite.svg") repeat-x center bottom;
  background-color: $blue;
  @include tileable();
}

.section-5 {
  .contact {
    font-family: $font-family-sans-serif;
  }
}

.section-6 {
  position: relative;
  .bg {
    position: absolute;
    display: block;
    left: 0;
    right: 0;
    height: 150px;
  }
  .top {
    top: 0;
    background: url("../images/edge_whiteg.svg") repeat-x center top;
    @include tileable();
  }
  .bottom{
    bottom: 0;
    background: url("../images/dedge_greeng.svg") repeat-x center bottom;
    @include tileable();
  }
  #map {height: 600px;}
}

footer {
  background-color: $green;
  height: 200px;
}


@include media-breakpoint-down(sm) {
  header {
    padding-bottom: 15%;
    img#logo { width: 95% }
  }
  .section-2 img#vive-guy { width: 95% }
  .section.section-2 .container { padding: 35%; }
  .section .container { padding: 100px 10px 80px; }
}

